// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should do a snapshot test of the checked Checkbox DOM 1`] = `
<label
  className="sendbird-checkbox"
  htmlFor="sendbird-checkbox-input"
  style={Object {}}
>
  <input
    checked={true}
    id="sendbird-checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="sendbird-checkbox--checkmark"
  />
</label>
`;

exports[`Checkbox should do a snapshot test of the default Checkbox DOM 1`] = `
<label
  className="sendbird-checkbox"
  htmlFor="sendbird-checkbox-input"
  style={Object {}}
>
  <input
    checked={false}
    id="sendbird-checkbox-input"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="sendbird-checkbox--checkmark"
  />
</label>
`;
